# minizinc-vendor

./: .gitignore  README.md  dependencies.toml
.github/workflows/: build.yml  pr-validate.yml  publish.yml  update-bot.yml
recipes/: cbc.sh  chuffed.sh  gecode.sh  highs.sh  or-tools.sh
resources/or-tools/: .bazelrc  BUILD.bazel  MODULE.bazel
scripts/: manifest.py  prune_built.py  update_check.py
